; ModuleID = '/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_buffer.c_allwrite.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/sdb/src/extr_buffer.c_allwrite.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64 (i32, i8*, i64)*, i32, i8*, i64)* @allwrite to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @allwrite(i64 (i32, i8*, i64)* %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i64 (i32, i8*, i64)*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i64 (i32, i8*, i64)* %0, i64 (i32, i8*, i64)** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  br label %11

11:                                               ; preds = %24, %4
  %12 = load i64, i64* %9, align 8
  %13 = icmp sgt i64 %12, 0
  br i1 %13, label %14, label %31

14:                                               ; preds = %11
  %15 = load i64 (i32, i8*, i64)*, i64 (i32, i8*, i64)** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %8, align 8
  %18 = load i64, i64* %9, align 8
  %19 = call i64 %15(i32 %16, i8* %17, i64 %18)
  store i64 %19, i64* %10, align 8
  %20 = load i64, i64* %10, align 8
  %21 = load i64, i64* %9, align 8
  %22 = icmp ne i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %32

24:                                               ; preds = %14
  %25 = load i64, i64* %10, align 8
  %26 = load i8*, i8** %8, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 %25
  store i8* %27, i8** %8, align 8
  %28 = load i64, i64* %10, align 8
  %29 = load i64, i64* %9, align 8
  %30 = sub nsw i64 %29, %28
  store i64 %30, i64* %9, align 8
  br label %11

31:                                               ; preds = %11
  store i32 1, i32* %5, align 4
  br label %32

32:                                               ; preds = %31, %23
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
